sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-natural-language-conversations/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-naturalLanguageConversations
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-natural-language-conversations
    sas.com/admin: namespace
  name: sas-natural-language-conversations
spec:
  host: $(INGRESS_HOST)
  path: /naturalLanguageConversations
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-natural-language-conversations
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-naturalLanguageConversations
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-natural-language-conversations
    sas.com/admin: namespace
  name: sas-natural-language-conversations-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /naturalLanguageConversations
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-natural-language-conversations
  wildcardPolicy: Subdomain
